--- a/synapse/sqlscript/Configure Azure Synapse Link.json
+++ b/synapse/sqlscript/Configure Azure Synapse Link.json
@@ -5,7 +5,7 @@
 			"name": "dp-203/06-HTAP/15-Synapse-link-sql"
 		},
 		"content": {
-			"query": "/*\nConfigure Azure Synapse Link\n\nMake sure that the dedicated SQL pool has been started\n*/\n\n-- Next, create the target schema\nCREATE SCHEMA SalesLT;\nGO\n\n-- Create a link connection in the Integrate hub (+)\n-- Change Feed is not supported on Free, Basic or Standard tier Single Database (S0,S1,S2) \n-- and Database in Elastic pool with max eDTUs < 100 or max vCore < 1. Please upgrade to a higher Service Objective.\n-- Upscale the database to an S3 (100 DTU)\n-- ESTIMATED COST / MONTH: 147.19 USD\n\n\n\n-- CLEANUP\n\nDROP SCHEMA SalesLT;\nGO",
+			"query": "/*\nConfigure Azure Synapse Link\n\nMake sure that the dedicated SQL pool has been started\n*/\n\n-- Next, create the target schema\nCREATE SCHEMA SalesLT;\nGO\n\n-- Create a link connection in the Integrate hub (+)\n-- Change Feed is not supported on Free, Basic or Standard tier Single Database (S0,S1,S2) \n-- and Database in Elastic pool with max eDTUs < 100 or max vCore < 1. Please upgrade to a higher Service Objective.\n-- Upscale the database to an S3 (100 DTU)\n-- ESTIMATED COST / MONTH: 147.19 USD\n\nSELECT  oh.SalesOrderID, oh.OrderDate,\n        p.ProductNumber, p.Color, p.Size,\n        c.EmailAddress AS CustomerEmail,\n        od.OrderQty, od.UnitPrice\nFROM SalesLT.SalesOrderHeader AS oh\nJOIN SalesLT.SalesOrderDetail AS od \n    ON oh.SalesOrderID = od.SalesOrderID\nJOIN  SalesLT.Product AS p \n    ON od.ProductID = p.ProductID\nJOIN SalesLT.Customer as c\n    ON oh.CustomerID = c.CustomerID\nORDER BY oh.SalesOrderID;\n\n-- CLEANUP\n\nDROP SCHEMA SalesLT;\nGO",
 			"metadata": {
 				"language": "sql"
 			},
